Links no index. Script no body em todas as páginas. Reestruturação para eliminar scroll em todas as páginas.

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -124,6 +124,8 @@
 
             <section id="site-calc-3a">
                 <h2>Site Cálculo 3A (em andamento)</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
                     <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 3A (em andamento)">
@@ -140,10 +142,13 @@
     </main>
 
     <footer></footer>
+
+    <script src="../assets/js/insere-header.js"></script>
+    <script src="../assets/js/menu.js"></script>
+    <script src="../assets/js/insere-footer.js"></script>
+
 </body>
 
-<script src="../assets/js/insere-header.js"></script>
-<script src="../assets/js/menu.js"></script>
-<script src="../assets/js/insere-footer.js"></script>
+
 
 </html>
