--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -15,24 +15,28 @@
 </head>
 
 <body>
+
     <header></header>
-        
+
     <main>
 
         <section class="sobre">
             <h2>O que são os projetos de ensino</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
         </section>
+
         <section class="content">
 
             <section id="geog-3d">
                 <h2>Geogebra 3D (2020-2021)</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Geogebra 3D">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -40,12 +44,14 @@
 
             <section id="disc-dist-soc">
                 <h2>Disciplinas no distanciamento social (2020)</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Disciplinas no Distanciamento Social">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -53,12 +59,14 @@
 
             <section id="novas-tec-ensino">
                 <h2>Novas tecnologias de ensino (2020--)</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Novas Tecnologias de Ensino">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -66,12 +74,14 @@
 
             <section id="gacv">
                 <h2>GACV (2020-2022)</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
                     <div class="img-container">
                         <img src="../assets/img/img-padrao.bmp" alt="GACV (2020-2022)">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -79,16 +89,16 @@
             
             <section id="fcg">
                 <h2>FCG (2023--)</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="FCG (2023--)">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
-
-
             </section>
 
         </section>
@@ -96,10 +106,12 @@
     </main>
 
     <footer></footer>
+
+    <script src="../assets/js/insere-header.js"></script>
+    <script src="../assets/js/menu.js"></script>
+    <script src="../assets/js/insere-footer.js"></script>
+
 </body>
 
-<script src="../assets/js/insere-header.js"></script>
-<script src="../assets/js/menu.js"></script>
-<script src="../assets/js/insere-footer.js"></script>
 
 </html>
