--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -41,6 +41,8 @@
 
             <section id="calc-func-uma-var">
                 <h2>Cálculo de Funções de Uma Variável</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
                     <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Cálculo de Funções de Uma Variável">
@@ -55,6 +57,8 @@
 
             <section id="calc-func-varias-var">
                 <h2>Cálculo de Funções de Várias Variável</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
                     <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Cálculo de Funções de Várias Variável">
@@ -68,6 +72,8 @@
 
             <section id="edo">
                 <h2>Equações Diferenciais Ordinárias</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
                     <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Equações Diferenciais Ordinárias">
@@ -88,10 +94,13 @@
     </main>
 
     <footer></footer>
+
+
+    <script src="../assets/js/insere-header.js"></script>
+    <script src="../assets/js/menu.js"></script>
+    <script src="../assets/js/insere-footer.js"></script>
 </body>
 
-<script src="../assets/js/insere-header.js"></script>
-<script src="../assets/js/menu.js"></script>
-<script src="../assets/js/insere-footer.js"></script>
+
 
 </html>
