Página padrão e organização do código

--- a/pages/msg-enviada.html
+++ b/pages/msg-enviada.html
@@ -27,6 +27,9 @@
             <img src="../assets/img/img-padrao.bmp" alt="msg-enviada">
             
             <a href="../index.html">
+                <div>
+                    <button>Ir para Página Inicial</button>
+                </div>
                 <h4>Ir para Página Inicial</h4>
             </a>
         </section>
