--- a/pages/pag-padrao.html
+++ b/pages/pag-padrao.html
@@ -9,17 +9,56 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
-    <link rel="stylesheet" href="../assets/css/quem-somos.css">
+    <!-- Colocar aqui o .css da página -->
+    <!-- <link rel="stylesheet" href="../assets/css/pag-padrao.css"> -->
 </head>
 
 <body>
+
     <header></header>
         
     <main>
         <section class="sobre">
-
+            <h2>Título</h2>
+            <p>Texto</p>
+            <div class="apenas-desktop">
+                <h2>Título (aparece apenas no desktop)</h2>
+                <p>Texto (aparece apenas no desktop)</p>
+            </div>
         </section>
         <section class="content">
+
+            <section id=""> <!-- colocar um id para ser chamado e rolas a página até aqui-->
+                <h2>Título do produto</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
+                <div class="recurso-container">
+                    <div>
+                        <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão"> <!-- colocar caminho da imagem e alt-->
+                        <div class="recurso-descricao">
+                            <p>Texto medio sobre o produto.</p>
+                            <p>Textos longos contornam a imagem</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis cumque ullam placeat ipsam ea eius reprehenderit libero sit repellendus molestiae? Earum quos quisquam veniam quae sequi ducimus aut alias? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores accusantium similique totam quae, magnam corrupti laudantium aliquam doloribus deserunt debitis tempora eius necessitatibus, voluptate at. Inventore incidunt nisi eius quidem.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat harum rem, esse laudantium earum at qui fuga cum vitae, sit ipsa laborum! Natus corporis, perferendis exercitationem culpa illo optio molestiae.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id=""> <!-- colocar um id para ser chamado e rolas a página até aqui-->
+                <h2>Título do produto</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
+                <div class="recurso-container">
+                    <div>
+                        <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão"> <!-- colocar caminho da imagem e alt-->
+                        <div class="recurso-descricao">
+                            <p>Texto curto sobre o produto.</p>
+                            <p>Texto curto fica em baixo.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </section>
     </main>
@@ -31,7 +70,5 @@
     <script src="../assets/js/insere-footer.js"></script>
 
 </body>
-
-
 
 </html>
