--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -33,7 +33,8 @@
                     <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Geogebra 3D">
                         <div class="recurso-descricao">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur esse nesciunt possimus similique modi minima at, placeat a ipsam nulla saepe? Ex quam perspiciatis architecto obcaecati tempora libero accusamus officia?</p>
                         </div>
                     </div>
                 </div>
@@ -49,6 +50,7 @@
                         <img src="../assets/img/img-padrao.bmp" alt="Disciplinas no Distanciamento Social">
                         <div class="recurso-descricao">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, maiores. Vel nostrum repellendus maxime doloremque blanditiis quod, eum eos explicabo, quasi possimus dignissimos. Ullam dicta iusto fugiat, quia tenetur voluptates! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae adipisci alias natus optio vel animi praesentium, exercitationem accusamus, repudiandae voluptates ab quas asperiores sapiente, explicabo illo ullam rerum et aut? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sunt nam error sequi quae tenetur itaque asperiores adipisci, eum nostrum atque, voluptas quos. Dolor corrupti culpa delectus, ut quam rerum.</p>
                         </div>
                     </div>
                 </div>
