Adicionei meus produtos, falta formatar o texto

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <img src="assets/img/func.png" alt="Funções de Uma Variável">
                         </a>
                         <div class="recurso-descricao">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p>Nesta seção, os monitores REDMat apresentam um material digital envolvente e informativo sobre as "Funções de Uma Variável". Explore conceitos fundamentais de matemática por meio de recursos visuais dinâmicos, proporcionando uma compreensão mais acessível e prazerosa.</p>
                         </div>
                     </div>
                 </div>
