--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -20,23 +20,34 @@
 
         <section class="sobre">
             <h2>Importância dos Recursos Digitais</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
+            <p>A integração efetiva de recursos digitais na educação moderna desempenha um papel crucial no aprimoramento da experiência de aprendizado. Ferramentas online, softwares educativos e plataformas interativas oferecem um ambiente dinâmico e adaptável, proporcionando acesso fácil a informações diversificadas.</p>
         </section>
 
         <section class="content">
 
             <section id="func-uma-var">
                 <h2>Funções de Uma Variável</h2>
-                <h5>Monitores:</h5>
+                <h5>Monitor: Gabriel Domingues</h5>
                 <h6>Data: --/----</h6>
                 <div class="recurso-container">
                     <div>
-                        <img src="../assets/img/img-padrao.bmp" alt="Funções de Uma Variável">
+                        <a href="https://youtu.be/DFKDT8Q-4iA?list=PLI_WUEKA3pqgfJ9jYeAlp02CGH9pdtxm8" target="_blank">
+                            <img src="../assets/img/funcao-inversa-seno.png" alt="Função Inversa do Seno">
+                          </a>
                         <div class="recurso-descricao">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur corrupti inventore repudiandae fugit atque pariatur ab, enim, recusandae quisquam soluta non accusamus vitae expedita repellendus consequatur vel reprehenderit perferendis facilis.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum modi nemo beatae quidem explicabo fuga ipsa voluptas aliquid amet ut, ad enim nostrum nesciunt iusto architecto atque. Ratione, quae qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aspernatur sunt temporibus cumque praesentium itaque id, porro, architecto dolore eius laboriosam cum error aperiam soluta, magnam illo delectus ut. Cupiditate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque omnis totam quibusdam fugiat alias fugit ducimus mollitia, ut assumenda consectetur porro magni voluptas explicabo quasi? Obcaecati eum reiciendis quo itaque.</p>
-                        </div>
+                            <p>Durante o ano, foi desenvolvido um projeto inovador que utiliza Python e novas tecnologias para explorar as propriedades das funções trigonométricas de maneira lúdica e envolvente. Através da criação de vídeos, o objetivo foi tornar o aprendizado desses conceitos matemáticos mais acessível e atraente para os alunos. A abordagem envolvente combinou programação em Python, gráficos dinâmicos e recursos visuais para ilustrar as prioridades das funções seno, cosseno e tangente, cossecante, secante, cotangente. Os vídeos podem ser acessados na nossa playlist no youtube na imagem ao lado</p>
+                            <p>Além dos vídeos, foi consolidado todo o conteúdo em um site interativo, oferecendo aos alunos a oportunidade de testar e aprimorar seus conhecimentos de forma prática. Este site, criado como parte integrante do projeto, visa proporcionar uma experiência educacional mais dinâmica, promovendo o engajamento dos estudantes de maneira autônoma. 
+                            </p>
+                            </div>
+                        <div>
+                            <a href="https://redmatuff.github.io/FichasTrigonometricas/Fun%C3%A7%C3%A3oSeno/index.html" target="_blank">
+                                <img src="../assets/img/site-ficha-trig.png" alt="Site Fichas Trigonométricas">
+                              </a>
+                           
+                            <div class="recurso-descricao">
+                                <p>Este projeto não apenas demonstra a aplicação prática de Python e tecnologias modernas no ensino da matemática, mas também representa um esforço em transformar conceitos abstratos em experiências tangíveis e significativas para os alunos. Ao unir programação, visualização de dados e interatividade, buscamos redefinir a abordagem tradicional do ensino de trigonometria, tornando-o mais atraente e acessível</p>
+                        
+                            </div>
                     </div>
                 </div>
             </section>
