--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -25,6 +25,23 @@
 
         <section class="content">
 
+
+            <section id="manim">
+                <h2>Recursos Computacionais com Python</h2>
+                <h5>Monitores: Gabriel Domingues</h5>
+                <h6>Data: 2023</h6>
+                <div class="recurso-container">
+                    <div class="recurso-descricao">
+                        <img src="../assets/img/python-logo.jpg" alt="Animação feita com Manim">
+                        
+                            <p>Durante o ano, foi desenvolvido um projeto inovador ao longo do ano, utilizando Python e novas tecnologias para explorar de forma lúdica as propriedades das funções trigonométricas. A criação de vídeos teve como objetivo tornar o aprendizado desses conceitos matemáticos mais acessível e atraente para os alunos. A abordagem envolveu programação em Python, gráficos dinâmicos e recursos visuais para ilustrar as propriedades das funções trigonométricas.</p>
+                            <!-- <p>Além disso, todo o conteúdo foi consolidado em um site interativo, oferecendo aos alunos a oportunidade de testar e aprimorar seus conhecimentos de forma prática. O site, parte integrante do projeto, proporciona uma experiência educacional dinâmica, promovendo o engajamento dos estudantes de maneira autônoma.</p>
+                            <p>Este projeto não apenas demonstra a aplicação prática de Python e tecnologias modernas no ensino da matemática, mas também representa um esforço em transformar conceitos abstratos em experiências tangíveis e significativas para os alunos. Ao unir programação, visualização de dados e interatividade, buscamos redefinir a abordagem tradicional do ensino de trigonometria, tornando-o mais atraente e acessível. </p>
+                       --> </div>                     
+                </div>
+            </section>
+            <hr>
+
             <section id="geog-3d">
                 <h2>Geogebra 3D (2020-2021)</h2>
                 <h5>Monitores:</h5>
