Reestruturação para adequação de conteúdo, debug e adição de item no menu, adição de item no index, adição de conteúdo em recursos.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!-- Limpeza e organização do código -->
 <!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
 <!-- Adição de links externos, conteúco, e imagens -->
+<!-- colocar padding no menu dos botões -->
+<!-- colocar efeitos de hoover no menu dos botões para escurecer opção -->
+<!-- colocar hoover em links do site escurecendo imagens quando o mouse passar em cima -->
 
 
 <!DOCTYPE html>
@@ -112,6 +115,12 @@
             <h2>Projetos de Ensino com participação do REDMat</h2>
             <p>Os monitores REDMat atuaram ou atuam nos seguintes projetos de ensino do Instituto de Matemática e Estatística.</p>
             <ul>
+                <li>
+                    <a href="pages/proj-ensino.html#manim">
+                        <img src="assets/icons/python-logo.jpg" alt="icone python">
+                        <p>Recursos Computacionais com Python (2023)</p>
+                    </a>
+                </li>
                 <li>
                     <a href="pages/proj-ensino.html#geog-3d">
                         <img src="assets/icons/geogebra-icon-peq.png" alt="icone geogebra 3D">
