--- a/pages/header-test.html
+++ b/pages/header-test.html
@@ -127,7 +127,7 @@
                 <!-- Botão 6 -->
                 <div>
                     <a href="https://redmatuff.github.io/site/pages/recursos.html">
-                        <button class="btn-barra">Recursos Digitais</button>
+                        <button class="btn-barra">Recursos Comp.</button>
                     </a>
                     <div class="menu-btn">
                         <a href="https://redmatuff.github.io/site/pages/recursos.html#func-uma-var">Funções de Uma Variável</a>
